added py version quantile comment

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -1114,7 +1114,8 @@ To calculate a 95\% percentile bootstrap confidence interval, we will do the fol
 
 \newpage
 
-To do this in R, we can use the `quantile()` function:
+To do this in R, we can use the `quantile()` function. Quantiles are expressed in proportions rather than 
+percentages, so the 2.5th and 97.5th percentiles would be the 0.025 and 0.975 quantiles, respectively.
 \index{quantile}
 \index{pull}
 \index{select}
