fix dollar sign typesetting in inference

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -174,7 +174,7 @@ population_proportion <- airbnb |>
 ```
 
 We can see that the proportion of `Entire home/apt` listings in
-the data set is `r round(population_proportion,3)`. This 
+the data set is `r round(population_proportion,3)`. This
 value, `r round(population_proportion,3)`, is the population parameter. Remember, this
 parameter value is usually unknown in real data analysis problems, as it is
 typically not possible to make measurements for an entire population.
@@ -398,7 +398,7 @@ estimates
 ```
 
 The average value of the sample of size 40 
-is \$`r round(estimates$mean_price, 2)`.  This 
+is \$`r format(round(estimates$mean_price, 2), nsmall=2)`. This
 number is a point estimate for the mean of the full population.
 Recall that the population mean was 
 \$`r round(population_parameters$mean_price,2)`. So our estimate was fairly close to
@@ -771,7 +771,7 @@ and use a bootstrap distribution using just a single sample from the population.
 Once again, suppose we are
 interested in estimating the population mean price per night of all Airbnb
 listings in Vancouver, Canada, using a single sample size of 40.
-Recall our point estimate was \$`r round(estimates$mean_price, 2)`. The
+Recall our point estimate was \$`r format(round(estimates$mean_price, 2), nsmall=2)`. The
 histogram of prices in the sample is displayed in Figure \@ref(fig:11-bootstrapping1).
 
 ```{r, echo = F, message = F, warning = F}
@@ -791,7 +791,7 @@ one_sample_dist
 ```
 
 The histogram for the sample is skewed, with a few observations out to the right. The
-mean of the sample is \$`r round(estimates$mean_price, 2)`.
+mean of the sample is \$`r format(round(estimates$mean_price, 2), nsmall=2)`.
 Remember, in practice, we usually only have this one sample from the population. So
 this sample and estimate are the only data we can work with.
 
@@ -1150,9 +1150,9 @@ boot_est_dist +
 To finish our estimation of the population parameter, we would report the point
 estimate and our confidence interval's lower and upper bounds. Here the sample
 mean price per night of 40 Airbnb listings was 
-\$`r round(mean(one_sample$price),2)`, and we are 95\% "confident" that the true
+\$`r format(round(mean(one_sample$price),2), nsmall=2)`, and we are 95\% "confident" that the true
 population mean price per night for all Airbnb listings in Vancouver is between
-\$(`r round(bounds[1],2)`, `r round(bounds[2],2)`).
+\$`r round(bounds[1],2)` and \$`r round(bounds[2],2)`.
 Notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
 practice, we would not know whether our interval captured the population
