dollar sign fixes in reg1

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -456,8 +456,8 @@ the model and returns the RMSPE for each number of neighbors. In the output of t
 results data frame, we see that the `neighbors` variable contains the value of $K$,
 the mean (`mean`) contains the value of the RMSPE estimated via cross-validation,
 and the standard error (`std_err`) contains a value corresponding to a measure of how uncertain we are in the mean value. A detailed treatment of this
-is beyond the scope of this chapter; but roughly, if your estimated mean is 100,000 and standard
-error is 1,000, you can expect the *true* RMSPE to be somewhere roughly between 99,000 and 101,000 (although it may
+is beyond the scope of this chapter; but roughly, if your estimated mean RMSPE is \$100,000 and standard
+error is \$1,000, you can expect the *true* RMSPE to be somewhere roughly between \$99,000 and \$101,000 (although it may
 fall outside this range). You may ignore the other columns in the metrics data frame,
 as they do not provide any additional insight.
 \index{cross-validation!collect\_metrics}
@@ -763,9 +763,9 @@ predictor *as part of the model tuning process* (e.g., if we are running forward
 in the chapter on evaluating and tuning classification models),
 then we must compare the accuracy estimated using only the training data via cross-validation.
 Looking back, the estimated cross-validation accuracy for the single-predictor 
-model was `r format(round(sacr_min$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
+model was \$`r format(round(sacr_min$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
 The estimated cross-validation accuracy for the multivariable model is
-`r format(round(sacr_multi$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
+\$`r format(round(sacr_multi$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
 Thus in this case, we did not improve the model 
 by a large amount by adding this additional predictor.
 
@@ -797,7 +797,7 @@ knn_mult_mets
 
 This time, when we performed KNN regression on the same data set, but also
 included number of bedrooms as a predictor, we obtained a RMSPE test error 
-of `r format(round(knn_mult_mets |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`.
+of \$`r format(round(knn_mult_mets |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`.
 Figure \@ref(fig:07-knn-mult-viz) visualizes the model's predictions overlaid on top of the data. This 
 time the predictions are a surface in 3D space, instead of a line in 2D space, as we have 2
 predictors instead of 1. 
