--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -86,7 +86,7 @@ think of the path as directions to the file. There are two kinds of paths:
 *relative* paths and *absolute* paths. A relative path indicates where the file is
 with respect to your *working directory* (i.e., "where you are currently") on the computer. 
 On the other hand, an absolute path indicates where the file is
-in respect to the computer's filesystem base (or *root*) folder, regardless of where you are working.
+with respect to the computer's filesystem base (or *root*) folder, regardless of where you are working.
 
 Suppose our computer's filesystem looks like the picture in Figure
 \@ref(fig:file-system-for-export-to-intro-datascience). We are working in a
