tru -> actual in clsfn1

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -785,7 +785,7 @@ new_obs <- tibble(Perimeter = 0, Concavity = 3.5)
 predict(knn_fit, new_obs)
 ```
 
-Is this predicted malignant label the true class for this observation? 
+Is this predicted malignant label the actual class for this observation?
 Well, we don't know because we do not have this
 observation's diagnosis&mdash; that is what we were trying to predict! The 
 classifier's prediction is not necessarily correct, but in the next chapter, we will 
