--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -911,7 +911,7 @@ the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom
 shown in Figure \@ref(fig:03-data-islands-bar).
 \index{ggplot!geom\_bar}
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.width=5, fig.height=2.75, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.width=5, fig.height=2.75, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Bar plot of Earth's landmass sizes with squished labels."}
 islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
   geom_bar(stat = "identity")
 
