improved text about barplot refine in viz

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -949,14 +949,12 @@ islands_bar
 The plot in Figure \@ref(fig:03-data-islands-bar-2) is definitely clearer now, 
 and allows us to answer our question 
 ("Are the top 7 largest landmasses continents?") in the affirmative. 
-However, we could still improve this visualization by organizing
-the bars by landmass size rather than by alphabetical order,
-and by coloring the bars based on whether they correspond to a continent.
-The data for this is stored in the `landmass_type` column. 
-To use this to color the bars, 
-we add the `fill` argument to the aesthetic mapping 
-and set it to `landmass_type`. 
-
+However, we could still improve this visualization by
+coloring the bars based on whether they correspond to a continent,
+and by organizing the bars by landmass size rather than by alphabetical order.
+The data for coloring the bars is stored in the `landmass_type` column,
+so we add the `fill` argument to the aesthetic mapping
+and set it to `landmass_type`.
 To organize the landmasses by their `size` variable, 
 we will use the `tidyverse` `fct_reorder` function
 in the aesthetic mapping to organize the landmasses by their `size` variable.
