added barplot title

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -968,14 +968,17 @@ by setting  `.desc = TRUE`.
 We do this here so that the largest bar will be closest to the axis line,
 which is more visually appealing.
 
-To label the x and y axes, we will use the `labs` function
-instead of the `xlab` and `ylab` functions from earlier in this chapter. 
-The `labs` function is more general; we are using it in this case because 
- we would also like to change the legend label.
-The default label is the name of the column being mapped to `fill`. Here that
-would be `landmass_type`;
-however `landmass_type` is not proper English (and so is less readable).
-Thus we use the `fill` argument inside `labs` to change that to "Type."
+To finalize this plot we will customize the axis and legend labels,
+and add a title to the chart. Plot titles are not always required, especially when
+it would be redundant with an already-existing
+caption or surrounding context (e.g., in a slide presentation with annotations).
+But if you decide to include one, a good plot title should provide the take home message
+that you want readers to focus on, e.g., "The Earth's seven largest landmasses are all continents,"
+or a more general summary of the information displayed, e.g., "The twelve largest landmasses on Earth."
+
+To make these final adjustments we will use the `labs` function rather than the `xlab` and `ylab` functions 
+we have seen earlier in this chapter, as `labs` lets us modify the legend label and title in addition to axis labels.
+We provide a label for each aesthetic mapping in the plot&mdash;in this case, `x`, `y`, and `fill`&mdash;as well as one for the `title` argument.
 Finally, we again \index{ggplot!reorder} use the `theme` function 
 to change the font size.
 
@@ -985,7 +988,10 @@ islands_bar <- ggplot(islands_top12,
                           y = fct_reorder(landmass, size, .desc = TRUE), 
                           fill = landmass_type)) +
   geom_bar(stat = "identity") +
-  labs(x = "Size (1000 square mi)", y = "Landmass",  fill = "Type") +
+  labs(x = "Size (1000 square mi)", 
+  	   y = "Landmass",  
+  	   fill = "Type", 
+  	   title = "The Earth's seven largest landmasses are all continents") +
   theme(text = element_text(size = 12))
 
 islands_bar
