--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -974,7 +974,7 @@ it would be redundant with an already-existing
 caption or surrounding context (e.g., in a slide presentation with annotations).
 But if you decide to include one, a good plot title should provide the take home message
 that you want readers to focus on, e.g., "Earth's seven largest landmasses are continents,"
-or a more general summary of the information displayed, e.g., "The twelve largest landmasses on Earth."
+or a more general summary of the information displayed, e.g., "Earth's twelve largest landmasses."
 
 To make these final adjustments we will use the `labs` function rather than the `xlab` and `ylab` functions 
 we have seen earlier in this chapter, as `labs` lets us modify the legend label and title in addition to axis labels.
@@ -991,7 +991,7 @@ islands_bar <- ggplot(islands_top12,
   labs(x = "Size (1000 square mi)", 
   	   y = "Landmass",  
   	   fill = "Type", 
-  	   title = "Earth's seven largest landmasses are continents") +
+  	   title = "Earth's twelve largest landmasses") +
   theme(text = element_text(size = 10))
 
 islands_bar
