--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -632,7 +632,7 @@ the source is `SQL [?? x 6]` and the output says `... more rows` at the end
 and a database type `sqlite` is listed.
 We didn't use the `collect` function because we are not ready to bring the data into R yet. \index{collect}
 We can still use the database to do some work to obtain *only* the small amount of data we want to work with locally
-in R Let's add the second part of our database query: selecting only the `language` and `mother_tongue` columns
+in R. Let's add the second part of our database query: selecting only the `language` and `mother_tongue` columns
 using the `select` function.
 
 ```{r}
@@ -640,6 +640,7 @@ aboriginal_lang_selected_db <- select(aboriginal_lang_db, language, mother_tongu
 aboriginal_lang_selected_db
 ```
 
+Now you can see that the database will return only the two columns we asked for with the `select` function.
 In order to actually retrieve this data in R as a data frame,
 we use the `collect` function. \index{filter}
 Below you will see that after running `collect`, R knows that the retrieved
