--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -647,7 +647,7 @@ Below you will see that after running `collect`, R knows that the retrieved
 data has 67 rows, and there is no database listed any more.
 
 ```{r}
-aboriginal_lang_data <- collect(aboriginal_lang_db)
+aboriginal_lang_data <- collect(aboriginal_lang_selected_db)
 aboriginal_lang_data
 ```
 
@@ -661,14 +661,14 @@ For example, look what happens when we try to use `nrow` to count rows
 in a data frame: \index{nrow}
 
 ```{r}
-nrow(aboriginal_lang_db)
+nrow(aboriginal_lang_selected_db)
 ```
  
 or `tail` to preview the last six rows of a data frame:
 \index{tail}
 
 ```{r, eval = FALSE}
-tail(aboriginal_lang_db)
+tail(aboriginal_lang_selected_db)
 ```
 
 ```
